--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODk1NzM0ODc4MjQ5ODI4MzYz.GJNjHI.RCQNrXIJPGg7N1tT8hob0gguMeSIwgex4FwrWI",
+    "token": "<>",
     "command_prefix": "/",
     "server_info": {
         "users": [],
