--- a/.github/workflows/azure-functions-app-nodejs.yml
+++ b/.github/workflows/azure-functions-app-nodejs.yml
@@ -34,6 +34,9 @@ jobs:
     runs-on: windows-latest # For Linux, use ubuntu-latest
     environment: dev
     steps:
+    - name: Azure Login
+      uses: Azure/login@v1.4.6
+            
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v3
 
