--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "test": "node bot.js"
+    "test": "echo test command"
   },
   "author": "",
   "license": "ISC",
