--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "test": "echo test command"
+    "test": "echo test command",
+    "start": "node bot.js"
   },
   "author": "",
   "license": "ISC",
