--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag discord-admin-bot:$(date +%s)
+
+    - name: Run App
+      run: docker run --name d-bot discord-admin-bot
