--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag discord-admin-bot:latest
+      run: docker build . --file Dockerfile --tag discord-admin-bot:$(date +%s)
 
-    - name: Run App
-      run: docker run --name d-bot discord-admin-bot
+    - name: Tag image
+      run: docker tag discord-admin-bot whitemorro177/discord-admin-bot
+
+    - name: Push image to DockerHub
+      run: docker push whitemorro177/discord-admin-bot
