--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,10 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag discord-admin-bot:latest
-
-    - name: Tag image
-      run: docker tag discord-admin-bot whitemorro177/discord-admin-bot
+      run: docker build . --file Dockerfile --tag whitemorro177/discord-admin-bot:latest
 
     - name: Push image to DockerHub
       run: docker push whitemorro177/discord-admin-bot
